@@ -35,7 +35,7 @@ public class PolygonFilterTest {
 		polygonFile = new File("test/com/bretth/osmosis/core/filter/v0_6/testPolygon.txt");
 		entityInspector = new SinkEntityInspector();
 		// polyAreaFilter has a notch out of the Northeast corner.
-		polyAreaFilter = new PolygonFilter(IdTrackerType.IdList, polygonFile, false, false);
+		polyAreaFilter = new PolygonFilter(IdTrackerType.IdList, polygonFile, false, false, false);
 		polyAreaFilter.setSink(entityInspector);
 		intersectingBound = new Bound(30, 0, 30, 0, "intersecting");
 		crossingIntersectingBound = new Bound(-10, 10, 30, -30, "crossing intersecting");
